package com.example.basic.autowired.dao;

public class BookEntity {
    private String title;

    public String getTitle() {
        return title;
    }

    public void setTitle(String title) {
       this.title = title;
    }
}
